<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProposalViewActivity"
    android:layout_marginHorizontal="15dp"
    android:layout_marginVertical="15dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_proposal_title"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_proposal_service_label"
            app:layout_constraintTop_toTopOf="parent"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginBottom="16dp"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <TextView
            android:id="@+id/text_view_service_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/input_service_name" />

        <TextView
            android:id="@+id/text_view_service_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:lines="2"
            android:maxLines="4"
            android:scrollbars="vertical"
            android:text="Description"/>

        <TextView
            android:id="@+id/text_view_service_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="DateTime"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_proposal_proposal_label"
            app:layout_constraintTop_toTopOf="parent"
            android:textStyle="bold"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/editTextTextMultiLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:minLines="2"
            android:lines="2"
            android:maxLines="4"
            android:scrollbars="vertical"
            android:text="Detalhes entregues sobre a proposta"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_service_value"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"/>

            <TextView
                android:id="@+id/text_view_service_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:text="R$ 00.00"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/accept_proposal_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:paddingHorizontal="100dp"
        android:text="@string/accept_proposal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>